name:                snakebot-client-haskell
version:             0.0.1.0
synopsis:            A client written in Haskell, for Cygni's snake game
-- description:
homepage:            https://github.com/Rembane/snakebot-client-haskell
license:             GPL-3
license-file:        LICENSE
author:              Andreas Ekeroot
maintainer:          andeke@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable snakebot-client-haskell
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    DeriveGeneric, GADTs, GHC, OverloadedStrings
  build-depends:       aeson,
                       base,
                       network,
                       unordered-containers,
                       websockets
  hs-source-dirs:      src
  default-language:    Haskell2010
